# umanga

./: CMakeLists.txt  main.c
include/: ufile.h  ulist.h  umanga.h  ustring.h  uvector.h
include/curl/: typecheck-gcc.h
include/jsonc/: config.h
src/: ufile.c  ulist.c  umanga.c  ustring.c  uvector.c
